--- a/templates/admin/custom_admin.html
+++ b/templates/admin/custom_admin.html
@@ -137,6 +137,15 @@
 
         </div>
       </div>
+      <div id="order-detail-modal" style="">
+          <div id="min">
+              <button id="close-order-modal" style="position: absolute; top: 10px; right: 10px; background: none; border: none; font-size: 20px; cursor: pointer;">&times;</button>
+              <h3 style="margin-bottom: 20px;">Детали заказа #<span id="order-id"></span></h3>
+              <div id="order-details-content">
+                  <!-- Здесь будут показаны детали заказа -->
+              </div>
+          </div>
+      </div>
     </div>
   </div>
 
@@ -316,41 +325,134 @@
       });
     });
 
-         function loadUserOrders(userId) {
-      fetch(`/api/v1/orders/user/orders/?user_id=${userId}`)
-          .then(response => response.json())
-          .then(data => {
-              const ordersContainer = document.getElementById('user-orders');
-              ordersContainer.innerHTML = '';
+function fetchOrderDetails(orderId) {
+  console.log(`Fetching details for order ID: ${orderId}`);
+  fetch(`/api/v1/orders/details/?order_id=${orderId}`)
+    .then(response => response.json())
+    .then(data => {
+      console.log("Received order details:", data);  // Логируем полученные данные для проверки
+      if (data.error) {
+        alert("Error: " + data.error);
+        return;
+      }
 
-              if (data.orders && data.orders.length > 0) {
-                  data.orders.forEach(order => {
-                      const orderElement = document.createElement('div');
-                      orderElement.style.marginBottom = '20px';
-                      orderElement.style.padding = '10px';
-                      orderElement.style.border = '1px solid #e2e8f0';
-                      orderElement.style.borderRadius = '8px';
-                      orderElement.style.backgroundColor = '#f8fafc';
-                       orderElement.style.color  = '#000'
+      // Обновляем содержимое модального окна с полученными данными
+      document.getElementById('order-id').textContent = orderId;
+      let orderDetailsContent = `
+        <p><strong>Время заказа:</strong> ${data.order_time || 'N/A'}</p>
+        <p><strong>Общая сумма:</strong> ${data.total_amount || 'N/A'}</p>
+        <p><strong>Способ оплаты:</strong> ${data.payment_method || 'N/A'}</p>
+        <p><strong>Статус заказа:</strong> ${data.order_status || 'N/A'}</p>
+        <p><strong>Самовывоз:</strong> ${data.is_pickup ? 'Да' : 'Нет'}</p>
+        <p><strong>Сдача:</strong> ${data.change || 'Нет'}</p>
+        <p><strong>Комментарии:</strong> ${data.comment || 'Нет комментариев'}</p>
+        <p><strong>Адрес доставки:</strong> ${data.user_address || 'Самовывоз'}</p>
+        <p><strong>Бонусные баллы:</strong> ${data.total_bonus_amount || 'Нет бонусов'}</p>
+        <p><strong>Источник заказа:</strong> ${data.order_source || 'N/A'}</p>
+      `;
 
-                      orderElement.innerHTML = `
-                          <div><strong>Заказ #${order.id}</strong></div>
-                          <div>Время Заказа: ${order.order_time}</div>
-                          <div>Общая сумма: ${order.total_amount}</div>
-                          <div>Статус: ${order.order_status}</div>
-                      `;
+      // Добавляем детали каждого товара
+      if (data.order_items && data.order_items.length > 0) {
+        orderDetailsContent += '<h4>Товары:</h4>';
+        data.order_items.forEach(item => {
+          orderDetailsContent += `
+            <div style="border: 1px solid #e2e8f0; padding: 10px; margin-bottom: 10px;">
+              <p><strong>Товар:</strong> ${item.product.name}</p>
+              <p><strong>Изображения продукта:</strong></p>
+              <img src="${item.product.image}" style="max-width: 100px; margin-right: 10px;">
+              <p><strong>Количество:</strong> ${item.quantity}</p>
+              <p><strong>Цена:</strong> ${item.product.price} руб.</p>
+              <p><strong>Размер:</strong> ${item.size.name}</p>
+              <p><strong>Цвет:</strong> ${item.color.name}</p>
+              <p><strong>Изображения Вариантов:</strong></p>
+              ${item.images.map(image => `<img src="${image.image_url}" style="max-width: 100px;">`).join('')}
+            </div>
+          `;
+        });
+      }
 
-                      ordersContainer.appendChild(orderElement);
-                  });
-              } else {
-                  ordersContainer.innerHTML = '<p>No orders found.</p>';
-              }
-          })
-          .catch(error => {
-              console.error('Error loading orders:', error);
-              document.getElementById('user-orders').innerHTML = '<p>Error loading orders. Please try again later.</p>';
-          });
+      // Проверяем наличие информации о складе
+      if (data.warehouse_info && data.warehouse_info.city) {
+        orderDetailsContent += `
+          <h4>Информация о складе:</h4>
+          <p><strong>Город:</strong> ${data.warehouse_info.city}</p>
+        `;
+      } else {
+        orderDetailsContent += `
+          <h4>Информация о складе:</h4>
+          <p><strong>Город:</strong> Информация не указана</p>
+        `;
+      }
+
+      document.getElementById('order-details-content').innerHTML = orderDetailsContent;
+
+      // Открываем модальное окно
+      document.getElementById('order-detail-modal').style.display = 'block';
+
+      // Добавляем обработчик для кнопки закрытия модального окна
+      document.getElementById('close-order-modal').addEventListener('click', function() {
+        document.getElementById('order-detail-modal').style.display = 'none';
+      });
+
+    })
+    .catch(error => {
+      console.error('Ошибка при загрузке деталей заказа:', error);
+    });
+}
+
+
+    function loadUserOrders(userId) {
+    fetch(`/api/v1/orders/user/orders/?user_id=${userId}`)
+        .then(response => response.json())
+        .then(data => {
+            const ordersContainer = document.getElementById('user-orders');
+            ordersContainer.innerHTML = '';  // Очищаем контейнер перед вставкой новых элементов
+
+            if (data.orders && data.orders.length > 0) {
+                data.orders.forEach(order => {
+                    const orderElement = document.createElement('div');
+                    orderElement.style.marginBottom = '20px';
+                    orderElement.style.padding = '10px';
+                    orderElement.style.border = '1px solid #e2e8f0';
+                    orderElement.style.borderRadius = '8px';
+                    orderElement.style.backgroundColor = '#f8fafc';
+                    orderElement.style.color = '#000';
+                    orderElement.classList.add('order-item');  // Добавляем класс для клика
+
+                    orderElement.innerHTML = `
+                        <div><strong>Заказ #${order.id}</strong></div>
+                        <div>Время Заказа: ${order.order_time}</div>
+                        <div>Общая сумма: ${order.total_amount}</div>
+                        <div>Статус: ${order.order_status}</div>
+                    `;
+
+                    ordersContainer.appendChild(orderElement);
+                });
+
+                // Назначаем обработчики кликов на все новые элементы с классом .order-item
+                document.querySelectorAll('.order-item').forEach(item => {
+                    item.addEventListener('click', function () {
+                        const orderId = this.querySelector('strong').textContent.split('#')[1]; // Получаем ID заказа
+                        console.log(`Клик на заказ с ID: ${orderId}`);  // Логируем для проверки
+                        fetchOrderDetails(orderId); // Загружаем детали заказа
+                    });
+                });
+            } else {
+                ordersContainer.innerHTML = '<p>No orders found.</p>';
+            }
+        })
+        .catch(error => {
+            console.error('Error loading orders:', error);
+            document.getElementById('user-orders').innerHTML = '<p>Error loading orders. Please try again later.</p>';
+        });
+}
+
+window.addEventListener('click', function(event) {
+  const modal = document.getElementById('order-detail-modal');
+  if (event.target === modal) {
+    modal.style.display = 'none';
   }
+});
 
     function loadMessages(userId) {
       fetchChatId(userId).then(function(chatId) {
@@ -591,7 +693,29 @@ display: block;
       border-color: #3b82f6;
       box-shadow: 0 0 0 2px rgba(59, 130, 246, 0.1);
     }
+#min{
+    position: absolute;
+    top: 20%;
+    left: 30%;
+    background-color: white;
+    padding: 20px;
+overflow-y: scroll;
+    min-height: 450px;
+    max-height: 400px;
+    border-radius: 8px;
+    width: 500px;
+    max-width: 100%;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 
+}
+#order-detail-modal{
+
+display: none;
+ position: fixed;
+  inset: 0;
+  background-color: rgba(15, 23, 42, 0.75);
+  z-index: 50;
+}
     /* Transitions */
     .user-item,
     button,
@@ -611,7 +735,18 @@ display: block;
       max-height: 120px;
       resize: none;
     }
-
+    strong{
+    color:#000
+    }
+     h3{
+    color:#000
+    }
+     h4{
+    color:#000
+    }
+     p{
+    color:#000
+    }
     .status-pending {
     color: #f59e0b; /* Желтый */
     }
